# IPRight

./: .gitignore  Makefile  debug-task-stuck-fail.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: admin.py  exports.py  tasks.py
backend/app/core/: auth.py  config.py  database.py  logging_middleware.py  state_machine.py
backend/app/models/: db.py
backend/app/schemas/: api.py  contracts.py
backend/app/services/: __init__.py  project_profile.py
backend/app/services/capture/: __init__.py  playwright_capture.py
backend/app/services/document/: __init__.py  application_form.py  base.py  codebook.py  diagrams.py  manual.py  manual_compose.py
backend/app/services/llm/: __init__.py  client.py
backend/app/services/runtime/: __init__.py  sandbox.py
backend/app/services/validator/: __init__.py
backend/tests/: conftest.py  test_api.py  test_api_extended.py  test_auth_middleware.py  test_document.py  test_errors.py  test_integration.py  test_llm.py  test_runtime_capture_flow.py  test_schemas.py  test_state_machine.py  test_validator.py  test_workers.py
deploy/: README.md  docker-compose.production.yml
docs/: AIAds_ECS_DEPLOY_PRODUCTION_README.md  DOCKER_RUNBOOK.md  GETTING_STARTED.md  IPRIGHT_ACCEPTANCE_AND_TEST_PLAN.md  IPRIGHT_ACCEPTANCE_REPORT.md  IPRIGHT_API_AND_DATA_SCHEMA.md  IPRIGHT_APP_CONTRACT.md  IPRIGHT_ARCHITECTURE_CHANGE_RECORD_2026-05.md  IPRIGHT_CLEANUP_STRATEGY_AND_RESULT.md  IPRIGHT_PRD.md  (+21 more)
(+106 files in other folders)
