[project]
name = "ipright-backend"
version = "0.1.0"
description = "IPRight Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "python-docx>=1.1",
    "httpx>=0.27",
    "minio>=7.2",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
